--- a/src/OC/PlatformBundle/Resources/views/Advert/view.html.twig
+++ b/src/OC/PlatformBundle/Resources/views/Advert/view.html.twig
@@ -9,7 +9,10 @@
 {% block ocplatform_body %}
 
   {% if advert.image is not null %}
-    <img src="{{ advert.image.url }}" alt="{{ advert.image.alt}}">
+    <img 
+      src="{{ asset(advert.image.webPath) }}"
+      alt="{{ advert.image.alt }}"
+    />
   {% endif %}
 
   <h2>{{ advert.title }}</h2>
